--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,12 @@
   overflow: hidden;
   line-height: 0;
   transform: rotate(180deg);
+  margin-top: 3rem;
 
   z-index: 1;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1100px) {
   .custom-shape-divider-bottom-1622236241 {
     display: none;
   }
